--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
 <html>
 <head>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
 
 <body>
 
-<h1>CALCULATOR</h1>
+<h1><i class="fa fa-calculator"></i> CALCULATOR</h1>
 
 
 <form name="condiciones de uso" method="post" action="index2.php" class="index">
@@ -38,7 +39,8 @@
 <div class="index">
 Este es un SITIO EN DESARROLLO que no está habilitado para ser usado como un sitio en PRODUCCIÓN, si está de acuerdo con estas condiciones de uso haga clic en el botón "ACEPTO CONDICIONES DE USO".</h3>
 </div>
-<input value="ACEPTO CONDICIONES DE USO" type="submit" />
+<br />
+<input value="ACEPTO CONDICIONES DE USO" type="submit" id='submit' />
 
 </form>
 
